Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5506

safe_mutex: Trying to lock unitialized mutex at safemalloc.c on server shutdown after SELECT with CONVERT_TZ

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.1.67, 5.2.14, 5.3.12, 5.5.34
    • 5.5.35, 5.3.13
    • None
    • None

    Description

      SELECT CONVERT_TZ( '2001-10-08 00:00:00', MAKE_SET(0, 'CET'), 'GMT' );
       
      --shutdown_server

      140106  2:20:47 [ERROR] Can't find description of time zone 'GMT'
      140106  2:20:47 [Note] Got signal 15 to shutdown mysqld
      140106  2:20:47 [Note] /data/repo/5.3.12/sql/mysqld: Normal shutdown
       
      140106  2:20:47 [Note] Event Scheduler: Purging the queue. 0 events
      140106  2:20:47 [Note] Debug sync points hit:                   128
      140106  2:20:47 [Note] Debug sync points executed:              0
      140106  2:20:47 [Note] Debug sync points max active per thread: 0
      140106  2:20:47 [Note] /data/repo/5.3.12/sql/mysqld: Shutdown complete
       
      safe_mutex: Trying to lock unitialized mutex at safemalloc.c, line 314
      140106  2:20:47 [ERROR] mysqld got signal 6 ;

      Thread pointer: 0x(nil)
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = (nil) thread_stack 0x48000
      /data/repo/5.3.12/sql/mysqld(my_print_stacktrace+0x35) [0xb91c08]
      /data/repo/5.3.12/sql/mysqld(handle_fatal_signal+0x2e1) [0x83c35d]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0xf030) [0x7f99bf34e030]
      /lib/x86_64-linux-gnu/libc.so.6(gsignal+0x35) [0x7f99be640475]
      /lib/x86_64-linux-gnu/libc.so.6(abort+0x180) [0x7f99be6436f0]
      /data/repo/5.3.12/sql/mysqld(safe_mutex_lock+0xa7) [0xb975a2]
      /data/repo/5.3.12/sql/mysqld(_myfree+0x1ad) [0xb739bc]
      /data/repo/5.3.12/sql/mysqld(String::free()+0x3e) [0x58ea54]
      /data/repo/5.3.12/sql/mysqld(String::~String()+0x18) [0x58ea14]
      /lib/x86_64-linux-gnu/libc.so.6(+0x36df2) [0x7f99be644df2]
      /lib/x86_64-linux-gnu/libc.so.6(+0x36e45) [0x7f99be644e45]
      /data/repo/5.3.12/sql/mysqld() [0x69890c]
      /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xfd) [0x7f99be62cead]
      /data/repo/5.3.12/sql/mysqld() [0x581be9]
      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      information that should help you find out what is causing the crash.
      Writing a core file

      revision-id: sergii@pisem.net-20130128081223-mp9rsd3t9soz8lly
      revno: 3621
      branch-nick: 5.3.12

      Attachments

        Activity

          People

            bar Alexander Barkov
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 20m
                20m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.